{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 2784,
  "lineage": "f9e4fb3d-fa18-2857-c7d6-35d6f9a90db2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d3c2404471a6fbf",
            "arn": "arn:aws:ec2:us-east-1:026243803152:elastic-ip/eipalloc-03d3c2404471a6fbf",
            "association_id": "eipassoc-0d6ddcc8c533afa94",
            "domain": "vpc",
            "id": "eipalloc-03d3c2404471a6fbf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02c071c0f015e69ab",
            "private_dns": "ip-10-0-1-82.ec2.internal",
            "private_ip": "10.0.1.82",
            "public_dns": "ec2-3-232-19-43.compute-1.amazonaws.com",
            "public_ip": "3.232.19.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "open-metabolics-nat-eip",
              "Project": "OpenMetabolics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "open-metabolics-nat-eip",
              "Project": "OpenMetabolics"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026243803152:internet-gateway/igw-0609897eb2779a97f",
            "id": "igw-0609897eb2779a97f",
            "owner_id": "026243803152",
            "tags": {
              "Environment": "dev",
              "Name": "open-metabolics-igw",
              "Project": "OpenMetabolics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "open-metabolics-igw",
              "Project": "OpenMetabolics"
            },
            "vpc_id": "vpc-03b3354a1f3eb5431"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "energy_expenditure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026243803152:loadbalancer/app/open-metabolics-ee-lb/65c678757cc67424",
            "arn_suffix": "app/open-metabolics-ee-lb/65c678757cc67424",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "open-metabolics-ee-lb-1941279187.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:026243803152:loadbalancer/app/open-metabolics-ee-lb/65c678757cc67424",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "open-metabolics-ee-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ea09f7900e5730f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7301e43ef04a056"
              },
              {
                "subnet_id": "subnet-0af52a2c614abe31e"
              }
            ],
            "subnets": [
              "subnet-0a7301e43ef04a056",
              "subnet-0af52a2c614abe31e"
            ],
            "vpc_id": "vpc-03b3354a1f3eb5431",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "energy_expenditure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026243803152:listener/app/open-metabolics-ee-lb/65c678757cc67424/0ef305f9eed1e097",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026243803152:targetgroup/open-metabolics-ee-tg/d4f0c43ee0ac24a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026243803152:listener/app/open-metabolics-ee-lb/65c678757cc67424/0ef305f9eed1e097",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:026243803152:loadbalancer/app/open-metabolics-ee-lb/65c678757cc67424",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.energy_expenditure",
            "aws_lb_target_group.energy_expenditure",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "energy_expenditure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026243803152:targetgroup/open-metabolics-ee-tg/d4f0c43ee0ac24a8",
            "arn_suffix": "targetgroup/open-metabolics-ee-tg/d4f0c43ee0ac24a8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026243803152:targetgroup/open-metabolics-ee-tg/d4f0c43ee0ac24a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:026243803152:loadbalancer/app/open-metabolics-ee-lb/65c678757cc67424"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "open-metabolics-ee-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03b3354a1f3eb5431"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d3c2404471a6fbf",
            "association_id": "eipassoc-0d6ddcc8c533afa94",
            "connectivity_type": "public",
            "id": "nat-06ebda7ab21e63033",
            "network_interface_id": "eni-02c071c0f015e69ab",
            "private_ip": "10.0.1.82",
            "public_ip": "3.232.19.43",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a7301e43ef04a056",
            "tags": {
              "Environment": "dev",
              "Name": "open-metabolics-nat-gw",
              "Project": "OpenMetabolics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "open-metabolics-nat-gw",
              "Project": "OpenMetabolics"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026243803152:route-table/rtb-089dff9c0a352a5e9",
            "id": "rtb-089dff9c0a352a5e9",
            "owner_id": "026243803152",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06ebda7ab21e63033",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "open-metabolics-private-rt",
              "Project": "OpenMetabolics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "open-metabolics-private-rt",
              "Project": "OpenMetabolics"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b3354a1f3eb5431"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026243803152:route-table/rtb-0b45d1e4555edec1d",
            "id": "rtb-0b45d1e4555edec1d",
            "owner_id": "026243803152",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0609897eb2779a97f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "open-metabolics-public-rt",
              "Project": "OpenMetabolics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "open-metabolics-public-rt",
              "Project": "OpenMetabolics"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b3354a1f3eb5431"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048bfd442a32e3668",
            "route_table_id": "rtb-089dff9c0a352a5e9",
            "subnet_id": "subnet-0668dc63605c0adfc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da385582df828409",
            "route_table_id": "rtb-089dff9c0a352a5e9",
            "subnet_id": "subnet-0c5b26095b521e2c3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab3d36f471ff102d",
            "route_table_id": "rtb-0b45d1e4555edec1d",
            "subnet_id": "subnet-0a7301e43ef04a056"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d154736300a0e2d2",
            "route_table_id": "rtb-0b45d1e4555edec1d",
            "subnet_id": "subnet-0af52a2c614abe31e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026243803152:security-group/sg-0ea09f7900e5730f8",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea09f7900e5730f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "open-metabolics-alb-sg",
            "name_prefix": "",
            "owner_id": "026243803152",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b3354a1f3eb5431"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026243803152:security-group/sg-04a7014e5cc6d1c00",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a7014e5cc6d1c00",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea09f7900e5730f8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "open-metabolics-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "026243803152",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b3354a1f3eb5431"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026243803152:subnet/subnet-0668dc63605c0adfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0668dc63605c0adfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026243803152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "open-metabolics-private-subnet",
              "Project": "OpenMetabolics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "open-metabolics-private-subnet",
              "Project": "OpenMetabolics"
            },
            "vpc_id": "vpc-03b3354a1f3eb5431"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026243803152:subnet/subnet-0c5b26095b521e2c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5b26095b521e2c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026243803152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "open-metabolics-private-subnet-2",
              "Project": "OpenMetabolics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "open-metabolics-private-subnet-2",
              "Project": "OpenMetabolics"
            },
            "vpc_id": "vpc-03b3354a1f3eb5431"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026243803152:subnet/subnet-0a7301e43ef04a056",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7301e43ef04a056",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026243803152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "open-metabolics-public-subnet",
              "Project": "OpenMetabolics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "open-metabolics-public-subnet",
              "Project": "OpenMetabolics"
            },
            "vpc_id": "vpc-03b3354a1f3eb5431"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026243803152:subnet/subnet-0af52a2c614abe31e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af52a2c614abe31e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026243803152",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "open-metabolics-public-subnet-2",
              "Project": "OpenMetabolics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "open-metabolics-public-subnet-2",
              "Project": "OpenMetabolics"
            },
            "vpc_id": "vpc-03b3354a1f3eb5431"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026243803152:vpc/vpc-03b3354a1f3eb5431",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f67f798383a8a7d",
            "default_route_table_id": "rtb-0acd77365a2b68dd3",
            "default_security_group_id": "sg-0272592d6df75d22c",
            "dhcp_options_id": "dopt-09f987e568500a034",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b3354a1f3eb5431",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0acd77365a2b68dd3",
            "owner_id": "026243803152",
            "tags": {
              "Environment": "dev",
              "Name": "open-metabolics-vpc",
              "Project": "OpenMetabolics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "open-metabolics-vpc",
              "Project": "OpenMetabolics"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}